Fix navigation links in Projetos.html and Contato.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <a href="Contato.html" class="cta-button">Entre em Contato</a>
             </div>
             <div class="hero-image">
-                <img src="../Marco/Imag/Marco.jpeg" alt="Foto do Desenvolvedor" class="profile-img">
+                <img src="Imag/Marco.jpeg" alt="Foto do Desenvolvedor" class="profile-img">
             </div>
         </div>
     </section>
