--- a/Contato.html
+++ b/Contato.html
@@ -11,7 +11,7 @@
         <div class="container">
             <h2 class="logo">Meu Portfólio</h2>
             <ul class="nav-links">
-                <li><a href="Index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#sobre">Sobre</a></li>
                 <li><a href="Projetos.html">Projetos</a></li>
                 <li><a href="#habilidades">Habilidades</a></li>
