--- a/Projetos.html
+++ b/Projetos.html
@@ -11,11 +11,11 @@
         <div class="container">
             <h2 class="logo">Meu Portfólio</h2>
             <ul class="nav-links">
-                <li><a href="Index.html">Home</a></li>
-                <li><a href="#sobre">Sobre</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html#sobre">Sobre</a></li>
                 <li><a href="Projetos.html">Projetos</a></li>
-                <li><a href="#habilidades">Habilidades</a></li>
-                <li><a href="#contato">Contato</a></li>
+                <li><a href="index.html#habilidades">Habilidades</a></li>
+                <li><a href="Contato.html">Contato</a></li>
             </ul>
         </div>
     </nav>
