--- a/Contato.html
+++ b/Contato.html
@@ -12,10 +12,10 @@
             <h2 class="logo">Meu Portfólio</h2>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#sobre">Sobre</a></li>
+                <li><a href="index.html#sobre">Sobre</a></li>
                 <li><a href="Projetos.html">Projetos</a></li>
-                <li><a href="#habilidades">Habilidades</a></li>
-                <li><a href="#contato">Contato</a></li>
+                <li><a href="index.html#habilidades">Habilidades</a></li>
+                <li><a href="Contato.html">Contato</a></li>
             </ul>
         </div>
     </nav>
@@ -27,7 +27,7 @@
         </div>
     </section>
 
-    <section class="contact-section">
+    <section id="contato" class="contact-section">
         <div class="container">
             <div class="contact-content">
                 <div class="contact-info">
