--- a/Projetos.html
+++ b/Projetos.html
@@ -75,21 +75,21 @@
 
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://via.placeholder.com/400x250?text=Projeto+3" alt="Projeto 3">
+                        <img src="Projetos/Projeto 3/Kimberly/imagem/Logo.jpg" alt="Kimberly Marketing">
                         <div class="project-overlay">
                             <div class="project-links">
-                                <a href="#" class="project-link">Ver Demo</a>
+                                <a href="Projetos/Projeto 3/Kimberly/index.html" class="project-link">Ver Demo</a>
                                 <a href="#" class="project-link">Código</a>
                             </div>
                         </div>
                     </div>
                     <div class="project-info">
-                        <h3>App Mobile de Tarefas</h3>
-                        <p>Aplicativo mobile para gerenciamento de tarefas com sincronização em nuvem.</p>
+                        <h3>Kimberly Marketing</h3>
+                        <p>Especialista em marketing digital com atuação em tráfego pago e design.</p>
                         <div class="project-tech">
-                            <span>React Native</span>
-                            <span>Firebase</span>
-                            <span>Redux</span>
+                            <span>HTML5</span>
+                            <span>CSS3</span>
+                            <span>JavaScript</span>
                         </div>
                     </div>
                 </div>
