Fix inline styles and add proper CSS for about stats section

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="about-text">
                     <p>Olá! Sou Marco, desenvolvedor web apaixonado por transformar ideias em experiências digitais incríveis. Tenho 2 anos de experiência e atuo com tecnologias modernas como React, Node.js e Python, desenvolvendo soluções que unem design elegante, performance e funcionalidade robusta. Além disso, utilizo inteligência artificial para automatizar projetos, otimizando processos e entregando resultados mais eficientes e inteligentes.</p>
                 </div>
-                <div class="about-stats" style="display: flex; justify-content: center; flex-wrap: wrap; gap: 20px; margin-top: 20px;">
+                <div class="about-stats">
                     <div class="stat-item">
                         <div class="stat-icon">🎯</div>
                         <h3>2</h3>
