Atualizando portfólio: melhorias no Index, CSS e links de projetos

--- a/Projetos.html
+++ b/Projetos.html
@@ -36,7 +36,7 @@
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="Projetos/Projeto 2/TopBurgue/index.html" class="project-link">Ver Demo</a>
-                                <a href="#" class="project-link">Código</a>
+                                <a href="https://github.com/MarcoSoouza/Marco/tree/main/Projetos/Projeto%202/TopBurgue" class="project-link">Código</a>
                             </div>
                         </div>
                     </div>
@@ -57,7 +57,7 @@
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="Projetos/Projeto 1/CupCake/index.html" class="project-link">Ver Demo</a>
-                                <a href="#" class="project-link">Código</a>
+                                <a href="https://github.com/MarcoSoouza/Marco/tree/main/Projetos/Projeto%201/CupCake" class="project-link">Código</a>
                             </div>
                         </div>
                     </div>
@@ -79,7 +79,7 @@
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="Projetos/Projeto 3/Kimberly/index.html" class="project-link">Ver Demo</a>
-                                <a href="#" class="project-link">Código</a>
+                                <a href="https://github.com/MarcoSoouza/Marco/tree/main/Projetos/Projeto%203/Kimberly" class="project-link">Código</a>
                             </div>
                         </div>
                     </div>
@@ -162,7 +162,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2023 Meu Portfólio. Todos os direitos reservados.</p>
+            <p>&copy; 2024 Meu Portfólio. Todos os direitos reservados.</p>
         </div>
     </footer>
 </body>
