--- a/Contato.html
+++ b/Contato.html
@@ -47,9 +47,9 @@
                         </div>
                     </div>
                     <div class="social-links">
-                        <a href="#" class="social-link">LinkedIn</a>
-                        <a href="#" class="social-link">GitHub</a>
-                        <a href="#" class="social-link">Twitter</a>
+                        <a href="https://linkedin.com/in/marco" class="social-link">LinkedIn</a>
+                        <a href="https://github.com/MarcoSoouza" class="social-link">GitHub</a>
+                        <a href="https://twitter.com/marco" class="social-link">Twitter</a>
                     </div>
                 </div>
                 <div class="contact-form">
