Add new project Kimberly and update Projetos.html

--- a/Projetos.html
+++ b/Projetos.html
@@ -53,6 +53,27 @@
 
                 <div class="project-card">
                     <div class="project-image">
+                        <img src="Projetos/Projeto 3/Kimberly/imagem/Logo.jpg" alt="Kimberly Marketing Site">
+                        <div class="project-overlay">
+                            <div class="project-links">
+                                <a href="Projetos/Projeto 3/Kimberly/index.html" class="project-link">Ver Demo</a>
+                                <a href="#" class="project-link">Código</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-info">
+                        <h3>Kimberly - Estratégia Digital</h3>
+                        <p>Website de marketing digital com foco em tráfego pago, design e identidade visual.</p>
+                        <div class="project-tech">
+                            <span>HTML5</span>
+                            <span>CSS3</span>
+                            <span>JavaScript</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-image">
                         <img src="Projetos/Projeto 1/CupCake/images/Logo.jpg" alt="CupCake Site">
                         <div class="project-overlay">
                             <div class="project-links">
