Atualizar informações do Projeto 4 - E-Commerce Loja de Eletrônicos

--- a/Projetos.html
+++ b/Projetos.html
@@ -97,17 +97,17 @@
 
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://via.placeholder.com/400x250?text=Projeto+4" alt="Projeto 4">
+                        <img src="../Marco/Imag/Logos2.jpg" alt="E-Commerce Loja de Eletrônicos">
                         <div class="project-overlay">
                             <div class="project-links">
-                                <a href="#" class="project-link">Ver Demo</a>
-                                <a href="#" class="project-link">Código</a>
+                                <a href="Projetos/Projeto 4/E-Commerce/index.html" class="project-link">Ver Demo</a>
+                                <a href="https://github.com/MarcoSoouza/Marco/tree/main/Projetos/Projeto%204/E-Commerce" class="project-link">Código</a>
                             </div>
                         </div>
                     </div>
                     <div class="project-info">
-                        <h3>Site Institucional</h3>
-                        <p>Website responsivo para empresa com design moderno e otimização SEO.</p>
+                        <h3>E-Commerce - Loja de Eletrônicos</h3>
+                        <p>Website de e-commerce completo com sistema de carrinho de compras, checkout e painel administrativo.</p>
                         <div class="project-tech">
                             <span>HTML5</span>
                             <span>CSS3</span>
