--- a/Projetos.html
+++ b/Projetos.html
@@ -35,8 +35,8 @@
                         <img src="Projetos/Projeto 2/TopBurgue/Imagem/Logo.jpg" alt="TopBurgue Site">
                         <div class="project-overlay">
                             <div class="project-links">
-                                <a href="Projetos/Projeto 2/TopBurgue/index.html" class="project-link">Ver Demo</a>
-                                <a href="https://github.com/MarcoSoouza/Marco/tree/main/Projetos/Projeto%202/TopBurgue" class="project-link">Código</a>
+                                <a href="Projetos/Projeto%202/TopBurgue/index.html" class="project-link" target="_blank">Ver Demo</a>
+                                <a href="https://github.com/MarcoSoouza/Marco/tree/main/Projetos/Projeto%202/TopBurgue" class="project-link" target="_blank">Código</a>
                             </div>
                         </div>
                     </div>
@@ -77,8 +77,8 @@
                         <img src="Projetos/Projeto 1/CupCake/images/Logo.jpg" alt="CupCake Site">
                         <div class="project-overlay">
                             <div class="project-links">
-                                <a href="Projetos/Projeto 1/CupCake/index.html" class="project-link">Ver Demo</a>
-                                <a href="https://github.com/MarcoSoouza/Marco/tree/main/Projetos/Projeto%201/CupCake" class="project-link">Código</a>
+                                <a href="Projetos/Projeto%201/CupCake/index.html" class="project-link" target="_blank">Ver Demo</a>
+                                <a href="https://github.com/MarcoSoouza/Marco/tree/main/Projetos/Projeto%201/CupCake" class="project-link" target="_blank">Código</a>
                             </div>
                         </div>
                     </div>
@@ -97,11 +97,11 @@
 
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="../Marco/Imag/Logos2.jpg" alt="E-Commerce Loja de Eletrônicos">
+                        <img src="Imag/Logos2.jpg" alt="E-Commerce Loja de Eletrônicos">
                         <div class="project-overlay">
                             <div class="project-links">
-                                <a href="Projetos/Projeto 4/E-Commerce/index.html" class="project-link">Ver Demo</a>
-                                <a href="https://github.com/MarcoSoouza/Marco/tree/main/Projetos/Projeto%204/E-Commerce" class="project-link">Código</a>
+                                <a href="Projetos/Projeto%204/E-Commerce/index.html" class="project-link" target="_blank">Ver Demo</a>
+                                <a href="https://github.com/MarcoSoouza/Marco/tree/main/Projetos/Projeto%204/E-Commerce" class="project-link" target="_blank">Código</a>
                             </div>
                         </div>
                     </div>
