--- a/Projetos.html
+++ b/Projetos.html
@@ -3,13 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projetos - Desenvolvedor Web</title>
-    <link rel="stylesheet" href="Projetos.css">
+    <title>Projetos - Desenvolvedor Web | Marco</title>
+    <meta name="description" content="Projetos desenvolvidos por Marco, desenvolvedor web">
+    
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/projetos.css">
 </head>
 <body>
+    <!-- Navbar -->
     <nav class="navbar">
         <div class="container">
-            <h2 class="logo">Meu Portfólio</h2>
+            <h2 class="logo">Marco.dev</h2>
+            <div class="menu-toggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="index.html#sobre">Sobre</a></li>
@@ -20,17 +35,20 @@
         </div>
     </nav>
 
-    <section class="hero">
+    <!-- Hero Section -->
+    <section class="hero-projects">
         <div class="container">
             <h1 class="hero-title">Meus Projetos</h1>
             <p class="hero-subtitle">Uma coleção dos meus trabalhos mais recentes e inovadores.</p>
         </div>
     </section>
 
+    <!-- Projects Section -->
     <section class="projects-section">
         <div class="container">
             <div class="projects-grid">
-                <div class="project-card">
+                <!-- Project 1 -->
+                <div class="project-card reveal">
                     <div class="project-image">
                         <img src="Projetos/Projeto 2/TopBurgue/Imagem/Logo.jpg" alt="TopBurgue Site">
                         <div class="project-overlay">
@@ -51,12 +69,13 @@
                     </div>
                 </div>
 
-                <div class="project-card">
+                <!-- Project 2 -->
+                <div class="project-card reveal">
                     <div class="project-image">
                         <img src="Projetos/Projeto 3/Kimberly/imagem/Logo.jpg" alt="Kimberly Marketing Site">
                         <div class="project-overlay">
                             <div class="project-links">
-                                <a href="Projetos/Projeto 3/Kimberly/index.html" class="project-link">Ver Demo</a>
+                                <a href="Projetos/Projeto%203/Kimberly/index.html" class="project-link" target="_blank">Ver Demo</a>
                                 <a href="#" class="project-link">Código</a>
                             </div>
                         </div>
@@ -72,7 +91,8 @@
                     </div>
                 </div>
 
-                <div class="project-card">
+                <!-- Project 3 -->
+                <div class="project-card reveal">
                     <div class="project-image">
                         <img src="Projetos/Projeto 1/CupCake/images/Logo.jpg" alt="CupCake Site">
                         <div class="project-overlay">
@@ -94,8 +114,8 @@
                     </div>
                 </div>
 
-
-                <div class="project-card">
+                <!-- Project 4 -->
+                <div class="project-card reveal">
                     <div class="project-image">
                         <img src="Imag/Logos2.jpg" alt="E-Commerce Loja de Eletrônicos">
                         <div class="project-overlay">
@@ -116,9 +136,10 @@
                     </div>
                 </div>
 
-                <div class="project-card">
+                <!-- Project 5 -->
+                <div class="project-card reveal">
                     <div class="project-image">
-                        <img src="https://via.placeholder.com/400x250?text=Projeto+5" alt="Projeto 5">
+                        <img src="https://via.placeholder.com/400x250?text=API+RESTful" alt="API RESTful">
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="#" class="project-link">Ver Demo</a>
@@ -137,9 +158,10 @@
                     </div>
                 </div>
 
-                <div class="project-card">
+                <!-- Project 6 -->
+                <div class="project-card reveal">
                     <div class="project-image">
-                        <img src="https://via.placeholder.com/400x250?text=Projeto+6" alt="Projeto 6">
+                        <img src="https://via.placeholder.com/400x250?text=Jogo+Web" alt="Jogo Web Interativo">
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="#" class="project-link">Ver Demo</a>
@@ -161,10 +183,26 @@
         </div>
     </section>
 
+    <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 Meu Portfólio. Todos os direitos reservados.</p>
+            <p>&copy; 2024 Marco.dev. Todos os direitos reservados.</p>
+            <div class="social-links">
+                <a href="https://linkedin.com/in/marco" class="social-link" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
+                    </svg>
+                </a>
+                <a href="https://github.com/MarcoSoouza" class="social-link" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+                    </svg>
+                </a>
+            </div>
         </div>
     </footer>
+
+    <!-- JavaScript -->
+    <script src="js/main.js"></script>
 </body>
 </html>
