--- a/index.html
+++ b/index.html
@@ -3,28 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfólio de Desenvolvedor Web</title>
-    <link rel="stylesheet" href="index.css">
+    <title>Portfólio de Desenvolvedor Web | Marco</title>
+    <meta name="description" content="Portfólio de Desenvolvedor Web especializado em React, Node.js e Python">
+    
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
+    <!-- Navbar -->
     <nav class="navbar">
         <div class="container">
-            <h2 class="logo">Meu Portfólio</h2>
+            <h2 class="logo">Marco.dev</h2>
+            <div class="menu-toggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
             <ul class="nav-links">
-                <li><a href="#sobre">Sobre</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="Projetos.html">Projetos</a></li>
-                <li><a href="#habilidades">Habilidades</a></li>
                 <li><a href="Contato.html">Contato</a></li>
             </ul>
         </div>
     </nav>
 
-    <section id="hero" class="hero">
+    <!-- Hero Section -->
+    <section class="hero">
         <div class="container">
             <div class="hero-content">
                 <h1 class="hero-title">Olá, sou um Desenvolvedor Web</h1>
                 <p class="hero-subtitle">Especializado em criar experiências digitais incríveis com tecnologias modernas.</p>
-                <a href="Contato.html" class="cta-button">Entre em Contato</a>
+                <a href="Contato.html" class="cta-button">
+                    Entre em Contato
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M17 8l4 4m0 0l-4 4m4-4H3" />
+                    </svg>
+                </a>
             </div>
             <div class="hero-image">
                 <img src="Imag/Marco.jpeg" alt="Foto do Desenvolvedor" class="profile-img">
@@ -32,17 +52,18 @@
         </div>
     </section>
 
-    <section id="sobre" class="about">
+    <!-- About Section -->
+    <section id="sobre" class="about section-dark">
         <div class="container">
-            <h2>Sobre Mim</h2>
+            <h2 class="section-title reveal">Sobre Mim</h2>
             <div class="about-content">
-                <div class="about-text">
-                    <p>Olá! Sou Marco, desenvolvedor web apaixonado por transformar ideias em experiências digitais incríveis. Tenho 2 anos de experiência e atuo com tecnologias modernas como React, Node.js e Python, desenvolvendo soluções que unem design elegante, performance e funcionalidade robusta. Além disso, utilizo inteligência artificial para automatizar projetos, otimizando processos e entregando resultados mais eficientes e inteligentes.</p>
+                <div class="about-text reveal">
+                    <p>Olá! Sou Marco, desenvolvedor web apaixonado por transformar ideias em experiências digitais incríveis. Tenho 2 anos de experiência e atuo com tecnologias modernas como React, Node.js e Python, desenvolvendo soluções queoram design elegante, performance e funcionalidade robusta. Além disso, utilizo inteligência artificial para automatizar projetos, otimizando processos e entregueado resultados mais eficientes e inteligentes.</p>
                 </div>
-                <div class="about-stats">
+                <div class="about-stats reveal">
                     <div class="stat-item">
                         <div class="stat-icon">🎯</div>
-                        <h3>2</h3>
+                        <h3>2+</h3>
                         <p>Anos de Experiência</p>
                     </div>
                     <div class="stat-item">
@@ -65,86 +86,92 @@
         </div>
     </section>
 
+    <!-- Skills Section -->
     <section id="habilidades" class="skills">
         <div class="container">
-            <h2>Habilidades Técnicas</h2>
+            <h2 class="section-title reveal">Habilidades Técnicas</h2>
             <div class="skills-grid">
-                <div class="skill-category">
+                <!-- Frontend -->
+                <div class="skill-category reveal">
                     <h3>Frontend</h3>
                     <div class="skill-bar">
-                        <span class="skill-name">HTML5</span>
+                        <span class="skill-name">HTML5 <span>95%</span></span>
                         <div class="progress-bar">
                             <div class="progress" style="width: 95%"></div>
                         </div>
                     </div>
                     <div class="skill-bar">
-                        <span class="skill-name">CSS3</span>
+                        <span class="skill-name">CSS3 <span>90%</span></span>
                         <div class="progress-bar">
                             <div class="progress" style="width: 90%"></div>
                         </div>
                     </div>
                     <div class="skill-bar">
-                        <span class="skill-name">JavaScript</span>
+                        <span class="skill-name">JavaScript <span>85%</span></span>
                         <div class="progress-bar">
                             <div class="progress" style="width: 85%"></div>
                         </div>
                     </div>
                     <div class="skill-bar">
-                        <span class="skill-name">React</span>
+                        <span class="skill-name">React <span>80%</span></span>
                         <div class="progress-bar">
                             <div class="progress" style="width: 80%"></div>
                         </div>
                     </div>
                 </div>
-                <div class="skill-category">
+
+                <!-- Backend -->
+                <div class="skill-category reveal">
                     <h3>Backend</h3>
                     <div class="skill-bar">
-                        <span class="skill-name">Node.js</span>
+                        <span class="skill-name">Node.js <span>85%</span></span>
                         <div class="progress-bar">
                             <div class="progress" style="width: 85%"></div>
                         </div>
                     </div>
                     <div class="skill-bar">
-                        <span class="skill-name">Express</span>
+                        <span class="skill-name">Express <span>80%</span></span>
                         <div class="progress-bar">
                             <div class="progress" style="width: 80%"></div>
                         </div>
                     </div>
                     <div class="skill-bar">
-                        <span class="skill-name">Python</span>
+                        <span class="skill-name">Python <span>75%</span></span>
                         <div class="progress-bar">
                             <div class="progress" style="width: 75%"></div>
                         </div>
                     </div>
                     <div class="skill-bar">
-                        <span class="skill-name">Django</span>
+                        <span class="skill-name">Django <span>70%</span></span>
                         <div class="progress-bar">
                             <div class="progress" style="width: 70%"></div>
                         </div>
                     </div>
                 </div>
-                <div class="skill-category">
+
+                <!-- Tools & Others -->
+                <div class="skill-category reveal">
                     <h3>Ferramentas & Outros</h3>
                     <div class="skill-bar">
-                        <span class="skill-name">Git</span>
+                        <span class="skill-name">Git <span>90%</span></span>
                         <div class="progress-bar">
                             <div class="progress" style="width: 90%"></div>
                         </div>
                     </div>
                     <div class="skill-bar">
-                        <span class="skill-name">Docker</span>
+                        <span class="skill-name">Docker <span>75%</span></span>
                         <div class="progress-bar">
                             <div class="progress" style="width: 75%"></div>
                         </div>
                     </div>
                     <div class="skill-bar">
-                        <span class="skill-name">AWS</span>
+                        <span class="skill-name">AWS <span>70%</span></span>
                         <div class="progress-bar">
                             <div class="progress" style="width: 70%"></div>
                         </div>
                     </div>
                     <div class="skill-bar">
-                        <span class="skill-name">Webpack</span>
+                        <span class="skill-name">Webpack <span>65%</span></span>
                         <div class="progress-bar">
                             <div class="progress" style="width: 65%"></div>
                         </div>
@@ -154,10 +181,26 @@
         </div>
     </section>
 
+    <!-- Footer -->
     <footer class="footer">
-        <div class="container" style="text-align: center;">
-            <p>&copy; 2024 Meu Portfólio. Todos os direitos reservados.</p>
+        <div class="container">
+            <p>&copy; 2024 Marco.dev. Todos os direitos reservados.</p>
+            <div class="social-links">
+                <a href="https://linkedin.com/in/marco" class="social-link" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
+                    </svg>
+                </a>
+                <a href="https://github.com/MarcoSoouza" class="social-link" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+                    </svg>
+                </a>
+            </div>
         </div>
     </footer>
+
+    <!-- JavaScript -->
+    <script src="js/main.js"></script>
 </body>
 </html>
