Atualização do portfólio - remoção de links e novos projetos

--- a/Projetos.html
+++ b/Projetos.html
@@ -48,7 +48,7 @@
                 <!-- Project 1 -->
                 <div class="project-card reveal">
                     <div class="project-image">
-                        <img src="Projetos/Projeto 2/TopBurgue/Imagem/Logo.jpg" alt="TopBurgue Site">
+                        <img src="Projetos/Projeto 2/TopBurgue/Imagem/Principal.png" alt="TopBurgue Site">
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="Projetos/Projeto%202/TopBurgue/index.html" class="project-link" target="_blank">Ver Demo</a>
@@ -92,7 +92,7 @@
                 <!-- Project 3 -->
                 <div class="project-card reveal">
                     <div class="project-image">
-                        <img src="Projetos/Projeto 1/CupCake/images/Logo.jpg" alt="CupCake Site">
+                        <img src="Projetos/Projeto 1/CupCake/images/Principal.png" alt="CupCake Site">
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="Projetos/Projeto%201/CupCake/index.html" class="project-link" target="_blank">Ver Demo</a>
