Atualização do menu de navegação

--- a/Projetos.html
+++ b/Projetos.html
@@ -79,7 +79,7 @@
                         </div>
                     </div>
                     <div class="project-info">
-                        <h3>Kimberly - Estratégia Digital</h3>
+                        <h3><div class=""></div></h3>
                         <p>Website de marketing digital com foco em tráfego pago, design e identidade visual.</p>
                         <div class="project-tech">
                             <span>HTML5</span>
